syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.speedscale.grpc";
option java_outer_classname = "HealthProto";

service Health {
  rpc Check (HealthCheckRequest) returns (HealthCheckResponse);
  rpc AWSALBHealthCheck (HealthCheckRequest) returns (HealthCheckResponse);
}

message HealthCheckRequest {}

message HealthCheckResponse {
  string status = 1;
} 