syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.speedscale.grpc";
option java_outer_classname = "LocationProto";

service LocationService {
  rpc EchoLocation (Location) returns (Location);
}

message Location {
  string locationID = 1;
  float latitude = 2;
  float longitude = 3;
  string macAddress = 4;
  string ipv4 = 5;
} 